# bcbc

./: .gitignore  Cargo.toml  README.md  go.mod  main.go  output.txt  sample2.txt
.github/workflows/: build.yml
calc/: calc.go  disk.go  hash.go  init.go  progress.go  target.go
cmd/bcbc/: main.go
configs/: filter.conf.sample
internal/app/bcbc/: calc.go  disk.go  error.go  hash.go  init.go  progress.go  target.go
merge/: merge.go
scripts/: build_bcbc.sh  install_bcbc.sh
src/: calc.rs  disk.rs  filter.rs  flow.rs  hash_file.rs  interruption.rs  lib.rs  log.rs  main.rs  merged_hash_file.rs  progress.rs  run_options.rs  target_file.rs
