[package]
name = "bcbc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7"
chrono = "0.4"
regex = "1.5"
once_cell = "1.10"
unicode-normalization = "0.1"
ctrlc = "3.2"
hex = "0.4"
dirs = "4.0"
path-slash = "0.1"
