[package]
name = "bcbc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
chrono = "0.4.19"
regex = "1.5.6"
once_cell = "1.12.0"
unicode-normalization = "0.1.19"
ctrlc = "3.2.2"
hex = "0.4.3"
dirs = "4.0.0"
path-slash = "0.1.4"
